# rust-gpu-snippets

./: Cargo.toml  README.md  particles.rs  shader.rs
shader/: Cargo.toml
shader/src/: lib.rs
src/: background.rs  camera.rs  fx_field.rs  fx_lines.rs  fx_spiral.rs  image.rs  input.rs  main.rs  particles.rs
